Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19242

recovery-small test_26b: Client was not evicted by MDS

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.17.0, Lustre 2.18.0
    • Lustre 2.17.0, Lustre 2.15.8
    • 3
    • 9223372036854775807

      This issue was created by maloo for hongchao.zhang <hongchao@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/0e46067e-b700-4c61-8996-2f3bb451345d

      test_26b failed with the following error:

      Client was not evicted by MDS
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-reviews/115576 - 5.14.0-503.40.1.el9_5.x86_64
      servers: https://build.whamcloud.com/job/lustre-reviews/115576 - 5.14.0-503.40.1_lustre.el9.x86_64

      <<Please provide additional information about the failure here>>

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      recovery-small test_26b - Client was not evicted by MDS

            laisiyao Lai Siyao
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: