LU-19242 revert: "LU-18878 ptlrpc: evictor/prolong timeout formula fix"

This reverts commit 0498ab0fd65e4eff81d2692e765f9f43666e212e.

Reason for revert: causing recovery-small test_26b to fail a lot.

Change-Id: I7aebfce58e09bc1af7cda0b6a4e462274aecacdb
Test-Parameters: trivial
Test-parameters: testlist=recovery-small env=ONLY=26b,ONLY_REPEAT=30
Test-Parameters: testlist=recovery-small env=ONLY=26b,ONLY_REPEAT=30
Test-Parameters: testlist=recovery-small env=ONLY=26b,ONLY_REPEAT=30
Test-Parameters: testlist=recovery-small env=ONLY=26b,ONLY_REPEAT=30
Signed-off-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/60797
Reviewed-by: Marc Vef <mvef@whamcloud.com>
Reviewed-by: Jian Yu <yujian@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>